--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -4,7 +4,7 @@
   box-sizing: border-box
 
 body
-  font-family: 'Helvetica Neue'
+  font-family: 'Arial'
   background: #f1f1f1
   font-weight: 300
 
@@ -20,19 +20,19 @@ input
     outline: none
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2)
 
+// Translation
 h1
   font-weight: 400
   color: #000
   display: block
-  padding: 20px 20px
+  padding: 10px 20px 5px
   font-size: 28px
   &.small
     font-size: 24px
   &.smaller
     font-size: 18px
 
-/* Dict
-
+// Dictionary definition
 .Def
   padding: 5px 20px
   font-weight: normal
@@ -43,6 +43,11 @@ h1
       color: green
     .def-ts
       color: gray
+      padding-right: 5px
+      &:before
+        content: '['
+      &:after
+        content: ']'
     .def-text
       font-weight: bold
     .def-fl
@@ -54,7 +59,18 @@ h1
     ul
       li
         display: inline-block
-        padding-right: 5px
+        padding-right: 8px
       &.syn
       &.mean
         color: saddlebrown
+
+  // Examples (def within a def)
+  .Def
+    padding: 2px
+    padding-left: 15px
+    
+    .def-text
+      font-weight: normal
+
+    .Tr
+      opacity: .7
