--- a/src/built/style.css
+++ b/src/built/style.css
@@ -6,7 +6,8 @@
 body {
   font-family: 'Arial';
   background: #f1f1f1;
-  font-weight: 300; }
+  font-weight: 300;
+  min-height: 150px; }
 
 input {
   width: 100%;
