--- a/src/built/style.css
+++ b/src/built/style.css
@@ -7,7 +7,8 @@ body {
   font-family: 'Arial';
   background: #f1f1f1;
   font-weight: 300;
-  min-height: 150px; }
+  min-height: 150px;
+  padding-bottom: 10px; }
 
 input {
   width: 100%;
@@ -38,6 +39,8 @@ h1 {
   font-size: 13px; }
   .Def .meta {
     padding: 3px 0; }
+    .Def .meta .def-text {
+      font-weight: bold; }
     .Def .meta .def-pos {
       color: green; }
     .Def .meta .def-ts {
@@ -47,25 +50,27 @@ h1 {
         content: '['; }
       .Def .meta .def-ts:after {
         content: ']'; }
-    .Def .meta .def-text {
-      font-weight: bold; }
     .Def .meta .def-fl {
-      display: inline-block;
-      padding-left: 10px;
+      display: block;
       color: gray; }
   .Def .Tr {
     padding-bottom: 5px; }
+    .Def .Tr .text {
+      font-size: 20px; }
     .Def .Tr ul li {
       display: inline-block;
       padding-right: 8px; }
     .Def .Tr ul.mean {
       color: saddlebrown; }
   .Def .Def {
+    line-height: 1;
     padding: 2px;
     padding-left: 15px; }
     .Def .Def .def-text {
       font-weight: normal; }
     .Def .Def .Tr {
-      opacity: .7; }
+      opacity: .5; }
+      .Def .Def .Tr .text {
+        font-size: 14px; }
 
 /*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IiIsImZpbGUiOiJzdHlsZS5jc3MiLCJzb3VyY2VSb290IjoiIn0=*/
